<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customTitleDialog"
        android:textColor="#80000000"
        android:text="@string/valorMaximo" />

    <EditText
        android:id="@+id/et_valor_max_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#000000"
        android:hint="100"
        android:textSize="@dimen/customEntryDialog"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customTitleDialog"
        android:textColor="#80000000"
        android:text="@string/valorMinimo"/>

    <EditText
        android:id="@+id/et_valor_min_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#000000"
        android:hint="0"
        android:textSize="@dimen/customEntryDialog"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customTitleDialog"
        android:textColor="#80000000"
        android:text="@string/salto_seekbar"/>

    <EditText
        android:id="@+id/et_salto_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#000000"
        android:hint="1"
        android:textSize="@dimen/customEntryDialog"/>


</LinearLayout>